added lint task to gulpfile

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Gulp Ember</title>
     <script src="/reload/reload.js"></script>
+    <script src="main.js"></script>
   </head>
 
-  <body>now it s</body>
+  <body>OH HAI</body>
 </html>
