--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <title>Gulp Ember</title>
     <script src="/reload/reload.js"></script>
-    <script src="main.js"></script>
+    <script src="/vendor/jquery/jquery.js"></script>
+    <script src="/vendor/handlebars/handlebars.js"></script>
+    <script src="/vendor/ember/ember.js"></script>
+    <script src="/dist/app.js"></script>
   </head>
 
   <body>OH HAI</body>
