started work around setting up an ember app for dev use

--- a/app/index.html
+++ b/app/index.html
@@ -10,5 +10,11 @@
     <script src="/dist/app.js"></script>
   </head>
 
-  <body>OH HAI</body>
+  <body>
+    
+  <script>
+    window.App.create();
+  </script>
+
+  </body>
 </html>
