--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <script src="/vendor/handlebars/handlebars.js"></script>
     <script src="/vendor/ember/ember.js"></script>
     <script src="/dist/app.js"></script>
+    <script src="/dist/templates.js"></script>
   </head>
 
   <body>
