--- a/app/index.html
+++ b/app/index.html
@@ -2,19 +2,38 @@
 <html lang="en">
 	<head>
 		<title>App Development</title>
+		<link rel="stylesheet" type="text/css" href="vendor/foundation/css/normalize.css" media="all">
+		<link rel="stylesheet" type="text/css" href="vendor/foundation/css/foundation.css" media="all">
+		<link rel="stylesheet" type="text/css" href="app.css" media="all">
 
 		<script type="text/javascript" src="/reload/reload.js"></script>
 		<script type="text/javascript" src="vendor/amd-loadr/loadr.js"></script>
 		<script type="text/javascript" src="vendor/jquery/jquery.js"></script>
 		<script type="text/javascript" src="vendor/handlebars/handlebars.js"></script>
 		<script type="text/javascript" src="vendor/ember/ember.js"></script>
+		<script type="text/javascript" src="vendor/ember-data/ember-data.js"></script>
 		<script type="text/javascript" src="vendor/ember-resolver/dist/ember-resolver.js"></script>
+		<script type="text/javascript" src="vendor/foundation/js/foundation.js"></script>
 	</head>
 	<body>
 		
 		<script type="text/javascript" src="app.js"></script>
-		<script type="text/javascript" src="temps.js"></script>
+		<script type="text/javascript" src="templates.js"></script>
 		<script type="text/javascript">
+			DS.DebugAdapter.reopen({
+			  getModelTypes: function() {
+			    var self = this;
+			    console.log(requirejs);
+			    return Ember.keys(requirejs._eak_seen).filter(function(key) {
+			      return !!key.match(/^gulp\/models\//) && self.detect(require(key));
+			    }).map(function(key){
+			      var type = require(key), typeKey = key.match(/^gulp\/models\/(.*)/)[1];
+			      type.toString = function() { return typeKey; };
+			      return type;
+			    });
+			  }
+			});
+
 			window.App = require('gulp/app')['default'].create();
 		</script>
 
